added support chrome browser by default

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          browser: ${{ inputs.browser }}
+          browser: ${{ inputs.browser || 'chrome' }}
