--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,3 +25,21 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           browser: ${{ inputs.browser || 'chrome' }}
+
+      - name: Generate Allure report
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+            allure_results: allure-results
+            gh_pages: gh-pages
+            allure_report: allure-report
+            allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+            PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKENN }}
+            PUBLISH_BRANCH: gh-pages
+            PUBLISH_DIR: allure-history
