added allure history

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,6 +26,14 @@ jobs:
         with:
           browser: ${{ inputs.browser || 'chrome' }}
 
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+            ref: gh-pages
+            path: gh-pages
+
       - name: Generate Allure report
         uses: simple-elf/allure-report-action@master
         if: always()
